--- a/rlst-pokedex/src/app/components/ui/home/search-bar/search-bar.component.html
+++ b/rlst-pokedex/src/app/components/ui/home/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
-<div class="search-bar">
-	<input type="search" name="search" pattern=".*\S.*" required>
+<form class="search-bar" (submit)="searchPokemon()">
+	<input type="search" name="search" pattern=".*\S.*" required [(ngModel)]="pokemonName">
 	<button class="search-btn" type="submit">
 		<span>Search</span>
 	</button>
-</div>
+</form>
