Added connection between data and UI to update the pokemon card, however I decided to make a refactoring on how the data is getting received trough the app, so next feature will be a refactoring of the data flow

--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.html
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,4 @@
 <div class="scene">
-    <rlst-pokemon-card></rlst-pokemon-card>
+    <rlst-pokemon-card [pokemonData]="pokemonData"></rlst-pokemon-card>
 </div>
   
