--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.scss
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.scss
@@ -2,9 +2,9 @@
 
   
   .scene {
-    width: 1000px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     perspective: 800px;
 
   }
