--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.html
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.html
@@ -1,8 +1,8 @@
 <div class="card">
     <div class="card__face card__face--front">
-    <img src="https://i.loli.net/2019/11/23/cnKl1Ykd5rZCVwm.jpg" />
+    <img src={{pokemonData.sprites.front_default}} />
     </div>
     <div class="card__face card__face--back">
-    <img src="https://i.loli.net/2019/11/16/cqyJiYlRwnTeHmj.jpg" />
+    <img src={{pokemonData.sprites.back_default}} />
     </div>
 </div>
