--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.scss
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.scss
@@ -1,19 +1,21 @@
   
     .card {
         position: relative;
-        width: 540px;
-        height: 900px;
+        width: 400px;
+        height: 400px;
         color: white;
         cursor: pointer;
         transition: 1s ease-in-out;
         transform-style: preserve-3d;
-    
+        border: none;
+
         &:hover {
           transform: rotateY(0.5turn);
         }
     
         .card__face {
           position: absolute;
+          border: none;
           top: 0;
           left: 0;
           width: 100%;
@@ -24,8 +26,8 @@
             linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
     
           img {
-            width: 500px;
-            height: 800px;
+            width: 400px;
+            height: 400px;
             object-fit: cover;
           }
     
