Finished refactoring of app so data es sent via subjects and observables rather than event emitters which are very inneficient on this scenario

--- a/rlst-pokedex/src/app/components/ui/home/home.component.html
+++ b/rlst-pokedex/src/app/components/ui/home/home.component.html
@@ -1,2 +1,2 @@
-<rlst-search-bar (searchEventEmitter)="notifyOfPokemonFound($event)"></rlst-search-bar>
-<rlst-pokemon-list [pokemonData]="pokemonData"></rlst-pokemon-list>
+<rlst-search-bar></rlst-search-bar>
+<rlst-pokemon-list></rlst-pokemon-list>
