--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.html
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,7 @@
-<div class="scene">
+<div class="scene" id="normal-sprite">
     <rlst-pokemon-card [pokemonData]="pokemonData"></rlst-pokemon-card>
+    <rlst-pokemon-card [pokemonData]="pokemonData" [shiny]="true"></rlst-pokemon-card>
 </div>
-  
+<div class="pokemon-info">
+    
+</div>
