--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.scss
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.scss
@@ -28,7 +28,7 @@
           img {
             width: 400px;
             height: 400px;
-            object-fit: cover;
+            object-fit: fill;
           }
     
           &--back {
