Finished adding bootstrap to project

--- a/rlst-pokedex/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.html
+++ b/rlst-pokedex/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="moves.length > 0">
+<div id="movements-container" *ngIf="moves.length > 0">
     <h1>Can Learn</h1>
     <ol class="gradient-list">
         <li *ngFor="let move of moves">{{move.move.name}}</li>
