--- a/rlst-pokedex/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.html
+++ b/rlst-pokedex/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.html
@@ -1,1 +1,6 @@
-<p>pokemon-info-right works!</p>
+<div id="stats-container">
+    <div *ngFor="let stat of stats">
+        <h3>{{stat.stat.name | titlecase}}</h3>
+        <ngb-progressbar type="success" [value]="stat.base_stat">{{stat.base_stat}}</ngb-progressbar>
+    </div>
+</div>
