--- a/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.scss
+++ b/rlst-pokedex/src/app/components/ui/utils/listing/pokemon-list/pokemon-card/pokemon-card.component.scss
@@ -3,7 +3,8 @@
         position: relative;
         width: 400px;
         height: 400px;
-        color: white;
+        color: transparent;
+        background: transparent;
         cursor: pointer;
         transition: 1s ease-in-out;
         transform-style: preserve-3d;
