--- a/rlst-pokedex/src/styles.scss
+++ b/rlst-pokedex/src/styles.scss
@@ -10,3 +10,5 @@ body {
     background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
     background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
   }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
