Added some basic styling for the appn to make it look nicer

--- a/src/app/components/ui/home/home.component.html
+++ b/src/app/components/ui/home/home.component.html
@@ -1,2 +1,5 @@
-<rlst-search-bar></rlst-search-bar>
-<rlst-pokemon-list></rlst-pokemon-list>
+<div id="main-container">
+    <h1>Pokedex!</h1>
+    <rlst-search-bar></rlst-search-bar>
+    <rlst-pokemon-list></rlst-pokemon-list>
+</div>
