--- a/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.scss
@@ -4,6 +4,10 @@
 
 #movements-container{
   margin-left: 50px;
+  max-height: 60vh;
+  overflow-y: auto;
+  background: rgba($color: #000000, $alpha: 0.5);
+  padding: 10px;
 }
 /*** VARIABLES ***/
 /* Colors */
