--- a/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.html
+++ b/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.html
@@ -1,6 +1,6 @@
-<div id="stats-container">
+<div *ngIf="stats.length > 0" id="stats-container">
     <div *ngFor="let stat of stats">
-        <h3>{{stat.stat.name | titlecase}}</h3>
+        <h3 class="stat-name">{{stat.stat.name | titlecase}}</h3>
         <ngb-progressbar type="success" [value]="stat.base_stat">{{stat.base_stat}}</ngb-progressbar>
     </div>
 </div>
