--- a/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
@@ -1,4 +1,11 @@
 #stats-container{
     margin-right: 50px;
+    padding: 10px;
     width: 350px;
+    overflow-y: auto;
+    background: rgba($color: #000000, $alpha: 0.5);
+}
+
+.stat-name{
+    color: white;
 }
