Added component to display pokedex entry from found Pokemon, for some reason this data was on a different endpoint than the original one

--- a/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.scss
@@ -8,6 +8,7 @@
   overflow-y: auto;
   background: rgba($color: #000000, $alpha: 0.5);
   padding: 10px;
+  border-radius: 15px;
 }
 /*** VARIABLES ***/
 /* Colors */
