--- a/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
@@ -4,6 +4,7 @@
     width: 350px;
     overflow-y: auto;
     background: rgba($color: #000000, $alpha: 0.5);
+    border-radius: 15px;
 }
 
 .stat-name{
