--- a/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/ui/utils/listing/pokemon-list/pokemon-list.component.scss
@@ -17,6 +17,14 @@
 .scene {
   width: 800px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   perspective: 800px;
+
+  .scene-top-container{
+    display: flex;
+    flex-direction: row;
+  }
 }
+
+
