--- a/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.scss
@@ -9,6 +9,11 @@
   background: rgba($color: #000000, $alpha: 0.5);
   padding: 10px;
   border-radius: 15px;
+
+  h1{
+    text-align: center;
+    color: white;
+  }
 }
 /*** VARIABLES ***/
 /* Colors */
