--- a/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
@@ -5,6 +5,11 @@
     overflow-y: auto;
     background: rgba($color: #000000, $alpha: 0.5);
     border-radius: 15px;
+
+    h1{
+        text-align: center;
+        color: white;
+    }
 }
 
 .stat-name{
