--- a/src/app/components/ui/utils/pokemon-description/pokemon-description.component.html
+++ b/src/app/components/ui/utils/pokemon-description/pokemon-description.component.html
@@ -1,3 +1,3 @@
-<div class="pokemon-entry-container">
+<div *ngIf="pokedexEntry != null " class="pokemon-entry-container">
     <h3>{{pokedexEntry}}</h3>
 </div>
