--- a/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
+++ b/src/app/components/ui/listing/pokemon-info-right/pokemon-info-right.component.scss
@@ -9,9 +9,11 @@
     h1{
         text-align: center;
         color: white;
+        font-size: 3vw;
     }
 }
 
 .stat-name{
     color: white;
+    font-size: 1.5vw;
 }
