--- a/src/app/components/ui/home/search-bar/search-bar.component.scss
+++ b/src/app/components/ui/home/search-bar/search-bar.component.scss
@@ -41,6 +41,7 @@
 	padding: 1.5em;
 	justify-content: center;
 	max-width: 30em;
+	background-color: indianred;
 }
 .search-bar input {
 	background: transparent;
