--- a/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.html
+++ b/src/app/components/ui/listing/pokemon-info-left/pokemon-info-left.component.html
@@ -1,6 +1,9 @@
 <div id="movements-container" *ngIf="moves.length > 0">
     <h1>Can Learn</h1>
     <ol class="gradient-list">
-        <li *ngFor="let move of moves">{{move.move.name | titlecase}} -  Lvl. {{move.version_group_details[0].level_learned_at}}</li>
+        <li *ngFor="let move of moves">
+            <h5>{{move.move.name | titlecase}}</h5>
+            <h6>Lvl. {{move.version_group_details[0].level_learned_at}}</h6>
+            </li>
     </ol>
 </div>
